--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "two-test",
-  "version": "1.0.4",
+  "version": "1.0.4-featureone.1",
   "description": "",
   "main": "index.js",
   "scripts": {
